# gtweetdeck

./: .autotools  .cproject  .gitignore  .project  Makefile.am  Makefile.in  configure  configure.ac
glade/: main.glade
src/: main.cc
